// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Section The Header renders the UI as expected 1`] = `
<header>
  <a
    className="logo"
    href="/"
    onClick={[Function]}
  >
    <h1>
      #DevMap
    </h1>
  </a>
  <div
    className="header-options"
  >
    <div
      className="buttons"
    >
      <a
        href="/signup"
        onClick={[Function]}
      >
        Sign-Up
      </a>
      <a
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </div>
  </div>
</header>
`;

exports[`Header Section The Login page renders the UI as expected 1`] = `
<form
  className="login"
  onSubmit={[Function]}
>
  <h3>
    Login:
  </h3>
  <span
    id="missing-values"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Missing values!
  </span>
  <label
    htmlFor="username"
  >
    Username:
  </label>
  <input
    autoComplete="username"
    id="username"
    name="username"
    type="text"
  />
  <span
    id="usernameInvalid"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Invalid username!
  </span>
  <label
    htmlFor="password"
  >
    Password:
  </label>
  <input
    autoComplete="current-password"
    id="password"
    name="password"
    type="password"
  />
  <span
    id="passwordInvalid"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Invalid password!
  </span>
  <div
    className="login-buttons"
  >
    <button
      type="submit"
    >
      Login
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</form>
`;

exports[`Header Section The Sign-Up page renders the UI as expected 1`] = `
<form
  className="signup"
  onSubmit={[Function]}
>
  <h3>
    Sign-up for an account:
  </h3>
  <span
    id="missing-values"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Missing values!
  </span>
  <label
    htmlFor="username"
  >
    Username:
  </label>
  <input
    autoComplete="username"
    id="username"
    name="username"
    type="text"
  />
  <span
    id="usernameError"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Username taken!
  </span>
  <label
    htmlFor="firstName"
  >
    First Name:
  </label>
  <input
    id="firstName"
    name="firstName"
    type="text"
  />
  <label
    htmlFor="lastName"
  >
    Last Name:
  </label>
  <input
    id="lastName"
    name="lastName"
    type="text"
  />
  <label
    htmlFor="email"
  >
    E-mail:
  </label>
  <input
    id="email"
    name="email"
    type="text"
  />
  <span
    id="emailError"
    style={
      Object {
        "display": "none",
      }
    }
  >
    E-mail taken!
  </span>
  <label
    htmlFor="password"
  >
    Password:
  </label>
  <input
    autoComplete="new-password"
    id="password"
    name="password"
    type="password"
  />
  <label
    htmlFor="repeatPassword"
  >
    Repeat password:
  </label>
  <input
    autoComplete="new-password"
    id="repeatPassword"
    name="repeatPassword"
    type="password"
  />
  <span
    id="passwordError"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Passwords don't match!
  </span>
  <label
    htmlFor="tools"
  >
    Tools:
  </label>
  <input
    id="tools"
    name="tools"
    type="text"
  />
  <label
    htmlFor="github"
  >
    GitHub:
  </label>
  <input
    id="github"
    name="github"
    type="text"
  />
  <div
    className="signup-buttons"
  >
    <button
      type="submit"
    >
      Sign-Up
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</form>
`;
